# fancyshit

./: CMakeLists.txt  README.md  requirements.txt
include/analysis/: code_analyzer.h
include/parser/: ast_parser.h
include/visualizer/: diagram_generator.h
src/: main.cpp
src/analysis/: code_analyzer.cpp
src/parser/: ast_parser.cpp
src/visualizer/: diagram_generator.cpp
src/web/: app.py
src/web/static/js/: main.js
src/web/templates/: base.html  error.html  index.html  upload.html  view.html
src/web/uploads/: example.puml  example_-_Copy.puml
test/: README.md  example.cpp  run_tests.sh
